// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils .getArgs should parse the args 1`] = `
Object {
  "nodeBin": "/path/to/node",
  "runCfgPath": "./tests/kitchen-sink-tests/sauce-runner.json",
  "suiteName": "kitchen-sink-1",
}
`;

exports[`utils .getEnv should parse env variables from runConfig 1`] = `
Object {
  "A": "1",
  "B": "2",
  "C": "3",
  "HELLO": "WORLD",
}
`;

exports[`utils .prepareNpmEnv should call npm install 1`] = `
Array [
  Array [
    "mypackage@1.2.3",
  ],
]
`;

exports[`utils .prepareNpmEnv should set right registry for npm 1`] = `
Array [
  Array [
    Object {
      "audit": false,
      "fund": false,
      "json": false,
      "registry": "my.registry",
      "retry": Object {
        "retries": 3,
      },
      "rollback": false,
      "save": false,
    },
  ],
]
`;

exports[`utils .prepareNpmEnv should use default registry 1`] = `
Array [
  Array [
    Object {
      "audit": false,
      "fund": false,
      "json": false,
      "registry": "my.registry",
      "retry": Object {
        "retries": 3,
      },
      "rollback": false,
      "save": false,
    },
  ],
  Array [
    Object {
      "audit": false,
      "fund": false,
      "json": false,
      "registry": "npmland.io",
      "retry": Object {
        "retries": 3,
      },
      "rollback": false,
      "save": false,
    },
  ],
  Array [
    Object {
      "audit": false,
      "fund": false,
      "json": false,
      "registry": "registryland.io",
      "retry": Object {
        "retries": 3,
      },
      "rollback": false,
      "save": false,
    },
  ],
  Array [
    Object {
      "audit": false,
      "fund": false,
      "json": false,
      "registry": "registryland.io",
      "retry": Object {
        "retries": 3,
      },
      "rollback": false,
      "save": false,
    },
  ],
]
`;

exports[`utils .prepareNpmEnv should use env var for registry 1`] = `
Array [
  Array [
    Object {
      "audit": false,
      "fund": false,
      "json": false,
      "registry": "my.registry",
      "retry": Object {
        "retries": 3,
      },
      "rollback": false,
      "save": false,
    },
  ],
  Array [
    Object {
      "audit": false,
      "fund": false,
      "json": false,
      "registry": "npmland.io",
      "retry": Object {
        "retries": 3,
      },
      "rollback": false,
      "save": false,
    },
  ],
]
`;

exports[`utils .prepareNpmEnv should use user registry 1`] = `
Array [
  Array [
    Object {
      "audit": false,
      "fund": false,
      "json": false,
      "registry": "my.registry",
      "retry": Object {
        "retries": 3,
      },
      "rollback": false,
      "save": false,
    },
  ],
  Array [
    Object {
      "audit": false,
      "fund": false,
      "json": false,
      "registry": "npmland.io",
      "retry": Object {
        "retries": 3,
      },
      "rollback": false,
      "save": false,
    },
  ],
  Array [
    Object {
      "audit": false,
      "fund": false,
      "json": false,
      "registry": "registryland.io",
      "retry": Object {
        "retries": 3,
      },
      "rollback": false,
      "save": false,
    },
  ],
]
`;
